# external_sorter

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE.txt  README.md
app/src/: CMakeLists.txt  main.cpp
external_sorter/include/: binary_file_buffer.h  defines.h  external_sorter.h  thread_pool.h  thread_safe_queue.h  utils.h
external_sorter/src/: CMakeLists.txt  binary_file_buffer.cpp  external_sorter.cpp  thread_pool.cpp  utils.cpp
tests/: CMakeLists.txt  external_sorter_tests.cpp  main.cpp
